--- a/yapnet_server/Cargo.toml
+++ b/yapnet_server/Cargo.toml
@@ -27,3 +27,4 @@ serde_json = "1.0.121"
 tokio = {version = "1.39.2", features = ["full"]  }
 tower-http = { version = "0.5.2", features = ["fs"] }
 uuid = { version = "1.10.0", features = ["serde", "v4"] }
+async-recursion = "1.1.1"
