--- a/yapnet_core/Cargo.toml
+++ b/yapnet_core/Cargo.toml
@@ -23,3 +23,4 @@ serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.121"
 mlua = { version = "0.9.9", features = ["lua54", "vendored", "macros", "async", "serialize"] }
 yapnet_macro = {path = "../yapnet_macro"}
+chrono = { version = "0.4.39", features = ["serde"] }
